# autohooks-plugin-black

./: .pontos-header-ignore  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  RELEASE.md  pyproject.toml  setup.py
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci-python.yml  codeql-analysis-python.yml  deploy-pypi.yml  release-pontos-manually.yml  release-pontos.yml  update-header.yml
autohooks/plugins/black/: __init__.py  __version__.py  black.py
changelog/: v21.12.0.md  v22.11.0.md  v22.7.0.md  v22.8.0.md  v22.8.1.md
tests/: __init__.py  black_test.py  pyproject.test.toml  test_black.py
