[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "autohooks-plugin-black"
version = "22.8.0"
description = "An autohooks plugin for python code formatting via black"
license = "GPL-3.0-or-later"
authors = ["Greenbone Networks GmbH <info@greenbone.net>"]
readme = "README.md"
homepage = "https://github.com/greenbone/autohooks-plugin-black"
repository = "https://github.com/greenbone/autohooks-plugin-black"
documentation = ""
classifiers = [
  # Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
  { include = "autohooks" },
  { include = "CHANGELOG.md", format = "sdist"},
  { include = "RELEASE.md", format = "sdist"},
  { include = "poetry.lock", format = "sdist"},
  { include = "poetry.toml", format = "sdist"},
]
keywords = [
  "git",
  "formatting",
  "linting",
  "hooks",
  "black",
]

[tool.poetry.dependencies]
python = "^3.7"
black = ">=20.8"
autohooks = ">=21.6.0"

[tool.poetry.dev-dependencies]
pytest = "*"
autohooks-plugin-pylint = ">=21.6.0"
autohooks-plugin-isort = ">=22.3.0"
mypy = "^0.971"
pylint = "^2.13.9"
pontos = ">=22.5.0"


[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39', 'py310']
exclude = '''
/(
    \.git
  | \.hg
  | \.venv
  | \.circleci
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.autohooks]
mode = "poetry"
pre-commit = [
  'autohooks.plugins.isort',
  'autohooks.plugins.black',
  'autohooks.plugins.pylint',
]

[tool.pontos.version]
version-module-file = "autohooks/plugins/black/__version__.py"

[tool.isort]
profile = "black"
line_length = 80
