[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "autohooks-plugin-black"
version = "23.7.0"
description = "An autohooks plugin for python code formatting via black"
license = "GPL-3.0-or-later"
authors = ["Greenbone AG <info@greenbone.net>"]
readme = "README.md"
homepage = "https://github.com/greenbone/autohooks-plugin-black"
repository = "https://github.com/greenbone/autohooks-plugin-black"
documentation = ""
# Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
  { include = "autohooks" },
  { include = "poetry.lock", format = "sdist"},
]
keywords = [
  "git",
  "formatting",
  "linting",
  "hooks",
  "black",
]

[tool.poetry.dependencies]
python = "^3.8"
black = ">=20.8"
autohooks = ">=21.6.0"

[tool.poetry.dev-dependencies]
autohooks-plugin-ruff = ">=23.6.0"
autohooks-plugin-isort = ">=22.3.0"
autohooks-plugin-mypy = ">=23.3.0"
coverage = ">=7.2.7"
mypy = ">=1.4"
pontos = ">=22.5.0"

[tool.black]
line-length = 80
target-version = ['py38', 'py39', 'py310', 'py311']
exclude = '''
/(
    \.git
  | \.venv
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.autohooks]
mode = "poetry"
pre-commit = [
  'autohooks.plugins.isort',
  'autohooks.plugins.black',
  'autohooks.plugins.ruff',
  'autohooks.plugins.mypy',
]

[tool.pontos.version]
version-module-file = "autohooks/plugins/black/__version__.py"

[tool.isort]
profile = "black"
line_length = 80

[tool.mypy]
files = "autohooks"
ignore_missing_imports = true

[tool.ruff]
line-length = 80
target-version = "py38"
